--- a/folder-2/my_project_directory/templates/table/index.html.twig
+++ b/folder-2/my_project_directory/templates/table/index.html.twig
@@ -10,35 +10,24 @@
 
 <div class="example-wrapper">
     <table class="table table-hover align-middle">
-        <thead class="bg-danger text-white">
+        <thead class="bg-primary text-white">
         <tr>
-            <th scope="col" class="bg-danger text-white">Name</th>
-            <th scope="col" class="bg-danger text-white">Email</th>
-            <th scope="col" class="bg-danger text-white">Password</th>
-            <th scope="col" class="bg-danger text-white">Actions</th>
+            <th scope="col" class="bg-primary text-white">Name</th>
+            <th scope="col" class="bg-primary text-white">Email</th>
+            <th scope="col" class="bg-primary text-white">Password</th>
+            <th scope="col" class="bg-primary text-white">Actions</th>
         </tr>
         </thead>
         <tbody>
         {% for user in users %}
             <tr class="bg-white">
-                <td class="fw-semibold text-danger">{{ user.name }}</td>
+                <td class="fw-semibold">{{ user.name }}</td>
                 <td>{{ user.email }}</td>
                 <td>
                     {{ user.password }}
                 </td>
                 <td class="text-center">
-{#                    <a href="{{ path('app_crud_read', {id: name.id}) }}" class="btn btn-light border-danger btn-sm me-1 text-danger">#}
-{#                        <i class="bi bi-eye"></i>#}
-{#                    </a>#}
-{#                    <a href="{{ path('app_crud_edit', {id: name.id}) }}" class="btn btn-light border-danger btn-sm me-1 text-danger">#}
-{#                        <i class="bi bi-pencil-square"></i>#}
-{#                    </a>#}
-{#                    <form method="post" action="{{ path('app_crud_delete', {id: name.id}) }}" class="d-inline" onsubmit="return confirm('Are you sure you want to delete this pizza?');">#}
-{#                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ name.id) }}">#}
-{#                        <button type="submit" class="btn btn-danger btn-sm">#}
-{#                            <i class="bi bi-trash"></i>#}
-{#                        </button>#}
-{#                    </form>#}
+                    <a href="{{ path('app_table_detail', {'id': user.id}) }}" class="btn btn-primary mt-auto">See detail</a>
                 </td>
             </tr>
         {% else %}
