--- a/folder-3/my_project_directory/templates/genre/index.html.twig
+++ b/folder-3/my_project_directory/templates/genre/index.html.twig
@@ -1,37 +1,53 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Genre index{% endblock %}
+{% block title %}Genre Index{% endblock %}
 
 {% block body %}
-    <h1>Genre index</h1>
+    <div class="container mt-5">
+        <div class="d-flex justify-content-between align-items-center mb-4">
+            <h1 class="display-4">Genres</h1>
+            <a href="{{ path('app_genre_new') }}" class="btn btn-success btn-lg">
+                <i class="fas fa-plus-circle"></i> Create New Genre
+            </a>
+        </div>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Description</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for genre in genres %}
-            <tr>
-                <td>{{ genre.id }}</td>
-                <td>{{ genre.name }}</td>
-                <td>{{ genre.description }}</td>
-                <td>
-                    <a href="{{ path('app_genre_show', {'id': genre.id}) }}">show</a>
-                    <a href="{{ path('app_genre_edit', {'id': genre.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="4">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_genre_new') }}">Create new</a>
+        <div class="card shadow-sm">
+            <div class="card-header bg-primary text-white">
+                <h5 class="mb-0">Genres List</h5>
+            </div>
+            <div class="card-body">
+                <table class="table table-hover table-bordered table-striped">
+                    <thead class="thead-light">
+                    <tr>
+                        <th>#</th>
+                        <th>Name</th>
+                        <th>Description</th>
+                        <th class="text-center">Actions</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for genre in genres %}
+                        <tr>
+                            <td>{{ genre.id }}</td>
+                            <td>{{ genre.name }}</td>
+                            <td>{{ genre.description }}</td>
+                            <td class="text-center">
+                                <a href="{{ path('app_genre_show', {'id': genre.id}) }}" class="btn btn-info btn-sm">
+                                    <i class="fas fa-eye"></i> Show
+                                </a>
+                                <a href="{{ path('app_genre_edit', {'id': genre.id}) }}" class="btn btn-warning btn-sm">
+                                    <i class="fas fa-edit"></i> Edit
+                                </a>
+                            </td>
+                        </tr>
+                    {% else %}
+                        <tr>
+                            <td colspan="4" class="text-center text-muted">No records found</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 {% endblock %}
