--- a/folder-3/my_project_directory/templates/genre/show.html.twig
+++ b/folder-3/my_project_directory/templates/genre/show.html.twig
@@ -1,30 +1,22 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Genre{% endblock %}
+{% block title %}{{ genre.name }} Films{% endblock %}
 
 {% block body %}
-    <h1>Genre</h1>
+    <div class="container mt-5">
+        <h1 class="display-4">{{ genre.name }} Films</h1>
+        <p class="lead">{{ genre.description }}</p>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ genre.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ genre.name }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ genre.description }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_genre_index') }}">back to list</a>
-
-    <a href="{{ path('app_genre_edit', {'id': genre.id}) }}">edit</a>
-
-    {{ include('genre/_delete_form.html.twig') }}
+        {% if genre.films is not empty %}
+            <ul class="list-group">
+                {% for film in genre.films %}
+                    <li class="list-group-item">
+                        <strong>{{ film.name }}</strong>: {{ film.description }}
+                    </li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <p class="text-muted">Er zijn nog geen films in dit genre.</p>
+        {% endif %}
+    </div>
 {% endblock %}
